# devforge

./: .env.example  .gitignore  README.md  llm.yaml  pyproject.toml
.allforai/bootstrap/: bootstrap-profile.json  file-catalog.json  infrastructure-profile.json  source-summary.json  workflow.json
.allforai/product-concept/: concept-baseline.json  concept-conflicts.json  product-concept.json  product-mechanisms.json  role-value-map.json
.allforai/product-map/: api-surface.json  (+4 more)
.devforge/: devforge.project_config.json  devforge.snapshot.json  last_cycle.json  session.json  workspace.sqlite3
docs/: cli.md  project-config.md
tests/: test_acceptance.py  test_acceptance_integration.py  test_acceptance_model.py  test_acceptance_node.py  test_closure_expander.py  test_concept_decision.py  test_context_broker.py  test_context_permissions.py  test_design_generator.py  test_design_validator.py  test_e2e_ecommerce.py  test_e2e_ecommerce_fixture.py  test_e2e_game.py  test_e2e_game_fixture.py  test_e2e_orchestration.py  test_executor_capabilities.py  test_executor_payloads.py  test_gap_analyzer.py  test_granularity_integration.py  test_graph_runner.py  test_knowledge.py  test_knowledge_files.py  test_live_llm.py  test_llm_config_loader.py  test_llm_google.py  test_llm_openrouter.py  test_llm_router.py  test_llm_transport.py  test_main_cli.py  test_persistence.py  test_planning_decision.py  test_push_retry_context.py  test_repl.py  test_retry_decision.py  test_retry_policy.py  test_seam_verifier.py  test_session.py  test_state_and_roles.py  test_state_codec.py  test_tools.py  (+7 more)
(+175 files in other folders)
