[project]
name = "app-factory"
version = "0.1.0"
description = "Role-driven multi-project development orchestration kernel."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=0.2,<1",
]

[project.scripts]
app-factory = "app_factory.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
