[project]
name = "devforge"
version = "0.1.0"
description = "Role-driven multi-project development orchestration kernel."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=0.2,<1",
]

[project.scripts]
devforge = "devforge.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
devforge = ["knowledge/content/**/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
